--- a/Source/GameEngineDemos/Msvc/GameEngineAI.vcxproj
+++ b/Source/GameEngineDemos/Msvc/GameEngineAI.vcxproj
@@ -21,9 +21,9 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{63B8049B-62EF-4FA0-BDC3-6B7FC807C03A}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>GameEngineDemos11</RootNamespace>
+    <RootNamespace>GameEngineAI11</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
-    <ProjectName>GameEngineDemos</ProjectName>
+    <ProjectName>GameEngineAI</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
