--- a/.gitignore
+++ b/.gitignore
@@ -248,3 +248,4 @@ ModelManifest.xml
 .fake/
 /Source/GameEngineDemos/Msvc/My Advisor Results - GameEngineDemos
 /Source/GameEngine/Msvc/My Advisor Results - GameEngine
+/Source/GameEngineAI/Msvc/My Advisor Results - GameEngineAI
